# personas

./: .gitignore  ARCHITECTURE.md  CI_WORKFLOWS.md  CLAUDE.md  CONTRIBUTING.md  DEPENDENCY_AUDIT.md  DEPENDENCY_AUDIT_CHECKLIST.md  DEPENDENCY_MANIFEST_GUIDE.md  INCIDENT_ISSUES.md  ISSUES.md  LESSONS_LEARNED.md  LOCKFILE_VALIDATION.md  README.md  RUNBOOK.md  SECRETS_SCAN_HARDENING.md  SPRINT.md  build-artifacts.yml  cloudwatch-alarms.json  jest.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: auto-pr.yml  build-artifacts.yml  claude-fix.yml  claude.yml  deploy.yml  pr-responder.yml  secrets-scan.yml  security-scan.yml
__tests__/: package-json.test.js
backend/: .gitignore  agent_orchestrator.py  context.py  deploy.py  errors.py  lambda_handler.py  me.txt  personality_agent.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  source_memory.py
backend/agents/: router_agent.py
backend/app/models/: persona.py
backend/app/routes/: onboarding.py
backend/data/: facts.json
backend/models/: persona.py
backend/public_personas/: buffett.json  chaplin.json  gandhi.json
backend/routes/: personas.py
backend/scripts/: generate_persona_images.py  migrate_default_twin.py
backend/services/: persona_service.py
backend/twins/: 074a05f1.json  a08256f0.json  c0a36178.json  da73fb49.json  example.json
docs/: PACKAGE_JSON_RATIONALIZATION.md
frontend/: middleware.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/chat/: page.tsx
frontend/app/create/: page.tsx
frontend/app/create/form/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/debate/: page.tsx
frontend/app/deepen/: page.tsx
frontend/app/deepen/[twin_id]/: page.tsx
frontend/app/onboarding/: layout.tsx  page.tsx
frontend/app/personas/onboarding/: page.tsx
frontend/app/resume/: page.tsx
frontend/app/sign-in/: page.tsx
frontend/app/sign-up/: page.tsx
frontend/app/twin/: page.tsx
frontend/app/twin/[id]/: page.tsx
frontend/components/: ConfirmationScreen.tsx  ErrorBoundary.tsx  PersonaForm.tsx  PersonaOnboarding.tsx  VoiceCapture.tsx  app-nav.tsx  persona-avatar.tsx  twin-chat.tsx  twin.tsx
frontend/lib/: error-handler.ts  onboarding.ts
frontend/lib/api/: personaAPI.ts
frontend/styles/: confirmation.css
memory/: 8e03dfd2-eb55-474b-97ed-1391b55c5b7a.json  b61e9c81-3184-47b6-99bb-98f34280771a.json
openspec/changes/add-persona-gap-ledger/: proposal.md  tasks.md
openspec/changes/generative-deepen-interview/: design.md  tasks.md
openspec/changes/migrate-default-twin-to-record/: design.md  proposal.md  tasks.md
openspec/changes/render-dormant-persona-fields/: tasks.md
openspec/specs/generative-deepen-topics/: spec.md
openspec/specs/persona-knowledge-gaps/: spec.md
openspec/specs/persona-prompt-rendering/: spec.md
openspec/specs/personality-model-versioning/: spec.md
scripts/: deploy.sh  smoke-test-staging.sh  validate-package-json.js
terraform/: backend.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
(+11 files in other folders)
