[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.42.54",
    "fastapi>=0.136.3",
    "httpx>=0.27.0",
    "mangum>=0.21.0",
    "openai>=2.21.0",
    "cryptography>=46.0.7",
    "pyjwt[crypto]>=2.13.0",
    "pypdf>=6.10.2",
    "starlette>=1.0.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.27",
    "uvicorn>=0.41.0",
    "python-docx>=1.1.2",
    "idna>=3.15",
]
