[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twin-backend"
version = "1.0.0"
description = "Personality Twin backend API"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "Twin Team"}]

dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.41.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pyjwt>=2.13.0",
    "boto3>=1.42.54",
    "python-multipart>=0.0.27",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
    "aiofiles>=23.0.0",
    "pillow>=12.3.0",
    "mangum>=0.21.0",
    "openai>=2.21.0",
    "cryptography>=46.0.7",
    "pypdf>=6.10.2",
    "python-docx>=1.1.2",
    "idna>=3.15",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "types-python-jose>=3.3.0",
    "types-aiofiles>=23.0.0",
]

[tool.setuptools]
packages = ["backend"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
